added index html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>worked on the index page</h1>
+    <div>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit placeat libero, harum vel aliquid, quisquam, expedita suscipit voluptas alias et laborum dolor ut earum ullam consectetur nulla fugiat? Voluptate incidunt dignissimos qui eos eveniet asperiores obcaecati praesentium, suscipit saepe illum minus error aut, est tempora quos impedit voluptates omnis atque. Eligendi fugit molestias porro, cumque blanditiis nam recusandae rem ab dicta cupiditate, accusamus, sed odio?</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non placeat temporibus, eius consectetur vel tenetur accusantium officiis quis, architecto consequatur quas earum veniam obcaecati saepe natus. Itaque ad obcaecati error veritatis fugit repellat, eos autem. Corrupti, incidunt quia quos nostrum iste eius optio eaque debitis nesciunt? Illo non sed excepturi!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil nemo ex soluta, culpa accusantium eligendi est quas, quidem maiores illo, odit iusto eos quaerat exercitationem temporibus pariatur adipisci cum quod labore veniam harum necessitatibus deserunt? Reiciendis consequuntur ducimus saepe iusto sapiente autem mollitia cumque natus nisi itaque porro, provident aut culpa dolorum cupiditate illo neque ullam enim quae harum quibusdam perspiciatis! Rem mollitia ullam nam expedita reiciendis ducimus blanditiis possimus.</p>
+    </div>
 </body>
 </html>
